fix: Adjust widths and visibility for responsive design in HeroSection.css

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 63%;
+    width: 330px;
 }
 
 .desktop-logo-wrapper {
@@ -61,7 +61,7 @@
 }
 
 .hero-right-panel {
-    width: 70%;
+    width: 67%;
     height: 100%;
     position: relative;
     overflow: hidden;
@@ -135,7 +135,6 @@
 @media (max-width: 767px) {
     .hero-wrapper {
         display: block;
-        height: 500px;
     }
 
     .hero-right-panel {
@@ -147,7 +146,7 @@
         z-index: 0;
     }
 
-    .desktop-logo-wrapper {
+    .desktop-logo-wrapper,.hero-footer-text {
         display: none;
     }
 
@@ -172,6 +171,9 @@
         z-index: 5;
         padding: 20px;
     }
+    .hero-content {
+        width: 220px;
+    }
 
     .hero-title {
         font-size: 32px;
@@ -181,6 +183,7 @@
     .hero-cta {
         background-color: white !important;
         color: black !important;
+        font-size: 13px;
     }
 
     .hero-left-panel {
@@ -192,16 +195,12 @@
     .hero-left-panel a {
         pointer-events: auto;
     }
+    
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
     .desktop-logo-wrapper {
         display: none;
-    }
-
-    .hero-content {
-        width: 100%;
-        max-width: 100%;
     }
 }
 
